k8s/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  labels:
    app: myapp 
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  template:
     metadata:
       labels:
         app: myapp
     spec:
        containers:
          - name: myapp
            image: myapp
            imagePullPolicy: Never 
            ports:
              - containerPort: 3000
