k8s/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-svc
spec:
  selector:
    app: myapp 
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
